--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -16,6 +16,6 @@
   <% end %>
   <h1> Supported resources: </h1>
   <ul>
-    <li>Candidates</li>
+    <li><%= link_to 'Candidates', candidates_path %></li>
   </ul>
 <% end %>
