--- a/app/assets/stylesheets/dashboards.scss
+++ b/app/assets/stylesheets/dashboards.scss
@@ -1,3 +1,54 @@
-// Place all the styles related to the dashboards controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
+.dashboard {
+  &__instruction {
+    text-align: center;
+  }
+
+  &__form-api-key {
+    margin: 70px auto;
+    max-width: 736px;
+
+    label {
+      font-size: 14px;
+      font-weight: 600;
+      margin-bottom: 7px;
+    }
+
+    input[type=text] {
+      border: 1px solid rgb(173, 174, 178);
+      outline: none;
+      padding: 12px 16px;
+      transition: all 0.2s ease 0s;
+      border-radius: 3px;
+    }
+
+    input[type=submit] {
+      color: #ffffff;
+      width: 100%;
+      margin-top: 2px;
+      border: none;
+      cursor: pointer;
+      outline: none;
+      padding: 12px;
+      font-size: 14px;
+      background: linear-gradient(180deg, rgba(255, 255, 255, 0.05) 0%, rgba(0, 0, 0, 0.05) 100%);
+      box-shadow: inset 0px -1px 1px rgba(0, 0, 0, 0.1), inset 0px 1px 1px rgba(255, 255, 255, 0.3);
+      transition: 0.2s;
+      font-weight: 600;
+      border-radius: 3px;
+      background-color: #f43f85;
+      background-blend-mode: overlay;
+
+      &:hover {
+        background-color: #e73b7e;
+      }
+      &:active {
+        box-shadow: inset 0px 4px 10px rgba(0, 0, 0, 0.2), inset 0px 1px 1px rgba(255, 255, 255, 0.3)
+      }
+    }
+
+    .input-wrapper {
+      display: flex;
+      flex-direction: column;
+    }
+  }
+}
