--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -1,18 +1,18 @@
 <div class="dashboard">
   <h1>👋 Welcome to the Teamtailor Import Export tool</h1>
-  <p class="dashboard__instruction">To start using tool, please enter your API key. You can find istruction how to generate it <a href="https://support.teamtailor.com/en/articles/5338195-use-our-teamtailor-api">here</a></p>
-
 
   <% if @api_key.blank? %>
+    <p class="dashboard__instruction">To start using tool, please enter your API key. You can find istruction how to generate it <a href="https://support.teamtailor.com/en/articles/5338195-use-our-teamtailor-api">here</a></p>
     <%= render 'dashboards/form_api_key' %>
   <% else %>
-    <div>
-      You are using the following API key:
-      <%= @api_key %>
+    <div class="dashboard__api-key-box">
+      <p class="dashboard__api-key-label">You are using the following API key: <strong><%= @api_key %></strong></p>
+      <%= form_with url: "/api_key/reset", method: :post do |form| %>
+        <button name="button" type="submit" class="dashboard__reset-button">
+X
+        </button>
+      <% end %>
     </div>
-    <%= form_with url: "/api_key/reset", method: :post do |form| %>
-      <%= form.submit "Reset" %>
-    <% end %>
     <h1> Supported resources: </h1>
     <ul>
       <li>Candidates</li>
