--- a/app/views/candidates/index.html.erb
+++ b/app/views/candidates/index.html.erb
@@ -1,5 +1,43 @@
 <h1>Candidates list</h1>
 
-<%= form_with url: candidates_path, method: :get do |form| %>
-  <%= form.submit "Search" %>
-<% end %>
+<div>
+  <%= form_with url: candidates_path, method: :get do |form| %>
+    <%= form.submit "Search" %>
+  <% end %>
+</div>
+
+<div>
+  <table>
+    <tr>
+      <th>Id</th>
+      <th>First Name</th>
+      <th>Last Name</th>
+      <th>Email</th>
+      <th>Created At</th>
+      <th>Connected</th>
+      <th>Unsubscribed</th>
+      <th>Linkedin URL</th>
+    </tr>
+    <% @data['data'].each do |candidate| %>
+      <tr>
+        <th><%= candidate.dig('id') %></th>
+        <th><%= candidate.dig('attributes', 'first-name') %></th>
+        <th><%= candidate.dig('attributes', 'last-name') %></th>
+        <th><%= candidate.dig('attributes', 'email') %></th>
+        <th><%= candidate.dig('attributes', 'created-at') %></th>
+        <th><%= candidate.dig('attributes', 'connected') %></th>
+        <th><%= candidate.dig('attributes', 'unsubscribed') %></th>
+        <th><%= candidate.dig('attributes', 'linkedin-url') %></th>
+      </tr>
+    <% end %>
+  </table>
+</div>
+
+<div class="center">
+  <% if @prev_page %>
+    <span> <%= link_to 'Previous', candidates_path(page: @prev_page)  %></span>
+  <% end %>
+  <% if @next_page %>
+    <span> <%= link_to 'Next', candidates_path(page: @next_page)  %></span>
+  <% end %>
+</div>
