--- a/app/views/candidates/index.html.erb
+++ b/app/views/candidates/index.html.erb
@@ -34,10 +34,15 @@
 </div>
 
 <div class="center">
+  <span> <%= link_to 'First', candidates_path(page: 1) %></span>
   <% if @prev_page %>
-    <span> <%= link_to 'Previous', candidates_path(page: @prev_page)  %></span>
+    <span> <%= link_to 'Previous', candidates_path(page: @prev_page) %></span>
+  <% end %>
+  <% pages_to_display(@current_page, @max_page).each do |page| %>
+    <span> <%= link_to page, candidates_path(page: page) %></span>
   <% end %>
   <% if @next_page %>
-    <span> <%= link_to 'Next', candidates_path(page: @next_page)  %></span>
+    <span> <%= link_to 'Next', candidates_path(page: @next_page) %></span>
   <% end %>
+  <span> <%= link_to 'Last', candidates_path(page: @max_page) %></span>
 </div>
