Adding connected as a filter and adding logic for keeping params while paginating

--- a/app/views/candidates/_form_candidate_filters.html.erb
+++ b/app/views/candidates/_form_candidate_filters.html.erb
@@ -8,7 +8,7 @@
       <%= form.label :created_at_to, "Created at - to" %>
       <%= form.date_field :created_at_to %>
       <%= form.label :connected, "Connected?" %>
-      <%= form.select :connected, ['true', 'false'] %>
+      <%= form.select :connected, ['', 'true', 'false'] %>
       <%= form.submit "Filter" %>
     </div>
   <% end %>
