--- a/app/views/candidates/index.html.erb
+++ b/app/views/candidates/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Candidates list</h1>
 <div>
-<%= render 'candidates/form_candidate_filters' %>
+<%= render 'candidates/form_candidate_filters', :filter_params => @filter_params %>
 </div>
 
 <div>
@@ -30,7 +30,7 @@
   </table>
 </div>
 
-<div class="center">
+<div class="pagination center">
   <span> <%= link_to 'First', candidates_path(page: 1) %></span>
   <% if @prev_page %>
     <span> <%= link_to 'Previous', candidates_path(@filter_params.merge(page: @prev_page)) %></span>
