--- a/app/views/candidates/index.html.erb
+++ b/app/views/candidates/index.html.erb
@@ -31,7 +31,7 @@
 </div>
 
 <div class="pagination center">
-  <span> <%= link_to 'First', candidates_path(page: 1) %></span>
+  <span> <%= link_to 'First', candidates_path(@filter_params.merge(page: 1)) %></span>
   <% if @prev_page %>
     <span> <%= link_to 'Previous', candidates_path(@filter_params.merge(page: @prev_page)) %></span>
   <% end %>
