Refactoring candidates controller and supporting filtering by locations

--- a/app/views/candidates/_form_candidate_filters.html.erb
+++ b/app/views/candidates/_form_candidate_filters.html.erb
@@ -6,12 +6,9 @@
       <%= form.label :created_at_from, "Created at - from" %>
       <%= form.date_field :created_at_from, value: filter_params['created_at_from'] %>
       <%= form.label :created_at_to, "Created at - to" %>
-
-     <select name="location_id" id="location_id"">
-        <option value=""></option>
-     </select>
-
       <%= form.date_field :created_at_to, value: filter_params['created_at_to'] %>
+      <%= form.label :locations, "Location" %>
+      <%= form.select :locations, [''], { selected: filter_params['locations'] }, { id: 'location_id' }%>
       <%= form.label :connected, "Connected?" %>
       <%= form.select :connected, ['', 'true', 'false'], selected: filter_params['connected'] %>
       <%= form.submit "Filter", data: { disable_with: false } %>
