--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -12,6 +12,13 @@ h1 {
   margin-top: 42px;
   text-align: center;
   font-weight: bold;
+  color: #34353A
+}
+h2 {
+  font-family: Inter;
+  font-weight: 800;
+  font-size: 32px;
+  color: #34353A
 }
 
 a {
