--- a/app/views/candidates/_error_message.html.erb
+++ b/app/views/candidates/_error_message.html.erb
@@ -1,5 +1,10 @@
 <% flash.each do |type, msg| %>
-  <div class="alert alert-info center">
-    <%= msg %>
+  <div class="center">
+    <b><%= msg%></b>
+    <ul class="errors_list">
+      <% @errors&.each do |error| %>
+        <li><%= error %></li>
+      <% end %>
+    </ul>
   </div>
 <% end %>
