--- a/app/assets/stylesheets/resource_list.scss
+++ b/app/assets/stylesheets/resource_list.scss
@@ -44,14 +44,13 @@
     }
   }
 
-
-
   &__table {
     background-color: #fff;
     padding: 67px 24px;
 
     table {
       border-collapse: collapse;
+      border-bottom: 1px solid #D2D3D6;
     }
 
     tr:nth-child(even) {
@@ -63,7 +62,7 @@
       padding: 18px 12px;
       text-align: left;
     }
-    td:first {
+    td:first-child {
       border-left: 1px solid #D2D3D6;
     }
 
