--- a/app/views/candidates/index.html.erb
+++ b/app/views/candidates/index.html.erb
@@ -51,20 +51,17 @@
           </tr>
         <% end %>
       </table>
+      <div class="resource-list__pagination">
+        <span> <%= link_to '<< ', candidates_path(@filter_params.merge(page: 1)) %></span>
+        <% if @prev_page %>
+          <span> <%= link_to 'Previous', candidates_path(@filter_params.merge(page: @prev_page)) %></span>
+        <% end %>
+        <% pages_to_display(@current_page, @max_page).each do |page| %>
+          <span> <%= link_to page, candidates_path(@filter_params.merge(page: page)) %></span>
+        <% end %>
+        <span> <%= link_to ' >>', candidates_path(@filter_params.merge(page: @max_page)) %></span>
+      </div>
   </div>
 </div>
 
 
-<div class="pagination center">
-  <span> <%= link_to 'First', candidates_path(@filter_params.merge(page: 1)) %></span>
-  <% if @prev_page %>
-    <span> <%= link_to 'Previous', candidates_path(@filter_params.merge(page: @prev_page)) %></span>
-  <% end %>
-  <% pages_to_display(@current_page, @max_page).each do |page| %>
-    <span> <%= link_to page, candidates_path(@filter_params.merge(page: page)) %></span>
-  <% end %>
-  <% if @next_page %>
-    <span> <%= link_to 'Next', candidates_path(@filter_params.merge(page: @next_page)) %></span>
-  <% end %>
-  <span> <%= link_to 'Last', candidates_path(@filter_params.merge(page: @max_page)) %></span>
-</div>
