--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -14,6 +14,7 @@ X
       <% end %>
     </div>
     <h1> Supported resources: </h1>
+    <div class="dashboard__resources-list">
     <ul>
       <li><%= link_to 'Candidates', candidates_path %></li>
     </ul>
