--- a/app/views/candidates/index.html.erb
+++ b/app/views/candidates/index.html.erb
@@ -25,6 +25,8 @@
     <% end %>
   </div>
 
+  <%= render 'shared_partials/error_message' %>
+
   <div class="resource-list__table">
     <table>
       <tr>
