--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -1,5 +1,5 @@
 <div class="dashboard">
-  <h1>👋 Welcome to the Teamtailor Import Export tool</h1>
+  <h1>👋 Welcome to the Teamtailor Export tool</h1>
 
   <% if @api_key.blank? %>
     <p class="dashboard__instruction">To start using tool, please enter your API key. You can find istruction how to generate it <a href="https://support.teamtailor.com/en/articles/5338195-use-our-teamtailor-api">here</a></p>
